--- a/web-gallery/css/style.css
+++ b/web-gallery/css/style.css
@@ -497,3 +497,28 @@ nav li a:hover, nav li a.selected
 {
 	background-color: #f01010 !important;
 }
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+.btn {
+	border-radius: 5px;
+	border: solid black 3px;
+	color: white;
+	background-color: blue;
+	padding: 5px;
+}
+a.btn{
+	text-decoration: none;
+}
